deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  strategy:
  template:
    metadata:
      labels:
        app: webapp
        role: webapp
    spec:
      containers:
      - name: webapp
        image: gcr.io/parks-api/webapp:latest
        ports:
        - name: webapp-port
          containerPort: 8080
