service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  selector:
    role: webapp
  ports:
  - port: 80
    targetPort: webapp-port
